# unitree_go2_ros2_sdk

./: .gitignore  Dockerfile  README.md  docker-compose.yml  map_1751495519.yaml  office.data  package.xml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
config/: slam.yaml
go2_sdk/: README.md  package.xml  setup.cfg  setup.py
go2_sdk/config/: nav2_params.yaml  rviz.rviz  slam.yaml
go2_sdk/go2_sdk/: api.py  go2_command.py  go2_command_script.py  go2_movement.py  pose_to_tf.py  waypoint_manager.py
go2_sdk/launch/: nav2_launch.py  slam_launch.py
launch/: slam_launch.py
map/: map_1751495519.pgm  office.pgm  office.yaml
models/: rplidar_mount_body.stl  rplidar_mount_head.stl
urdf/: unitree_go2.urdf  unitree_go2.urdf.xacro
zenoh/: zenoh_bridge_config.json5
